<resources>
    <string name="app_name">儒释道网路电台</string>
    <string name="navigation_drawer_open">打开导航</string>
    <string name="navigation_drawer_close">关闭导航</string>
    <string name="action_select_server">选择线路</string>
    <string name="jwjy">经文讲义</string>
    <string name="jsy">仅声音</string>
    <string name="spbt">视频标题</string>
    <string name="jmlb">节目列表</string>
    <string name="zxxx">最新消息</string>
    <string name="wljwl">未连接网络，请连网后重新打开</string>
    <string name="zrsj">载入数据</string>
    <string name="sjjzz">数据加载中...</string>
    <string name="onstop">程序关闭，关闭视频。</string>
    <string name="sxwc">刷新完成</string>
    <string name="sjhcsb">获取数据失败，程序将关闭。\r\n请连网后重新打开本程序。</string>
    <string name="wlfwcw">网络服务错误</string>
    <string name="wlljcw">网络连接错误</string>
    <string name="wlcs">网络超时</string>
    <string name="action_select_program_type">节目类型</string>
    <string name="lxwm">联系我们</string>
    <string name="spjzsb">视频加载失败。\r\n请检查网络重新加载。</string>
    <string name="gfwz">官方网站</string>
    <string name="pl">噗浪</string>
    <string name="xlwb">新浪微博</string>
    <string name="txwb">腾讯微博</string>
    <string name="czxx">电子信箱</string>
    <string name="wxh">微信号</string>
    <string name="action_news">新闻</string>
    <string name="action_about">关于</string>
    <string name="bt_start">打开电台</string>
    <string name="app_sub_title">崇德兴仁  教学为先</string>
    <string name="fygl">法语甘露</string>
    <string name="bt_label_spzb">视频直播</string>
    <string name="bt_label_ypdb">音频点播</string>
    <string name="action_manager_mp3">音频点播管理</string>
    <string name="save_change">完成</string>
    <string name="title_activity_mp3_manager">音频点播管理</string>
    <string name="title_activity_mp3_player">播放器</string>
    <string name="action_add_local_mp3_program">添加</string>
    <string name="action_local_setting">设置</string>
    <string name="title_activity_local_mp3_manager">选择下载项目</string>
    <string name="down_num_explain">以当前播放为中心，当下载文件数量达到此数值时，就停止下载。在继续播放下一个音频时，删除最旧的那个文件，下载新的文件。</string>
    <string name="only_wifi_down_mp3">仅在使用WIFI时下载</string>
    <string name="down_mp3_max_num">最大下载量</string>
    <string name="action_local_mp3">音频下载</string>
    <string name="down_msg_connect_fail">连接服务器出错，停止下载。</string>
    <string name="down_msg_remote_file_noexist">远程文件不存在</string>
    <string name="down_msg_local_bigger_remote">文件下载完成</string>
    <string name="down_msg_download_success">下载完成</string>
    <string name="down_msg_no_next">已达到最大下载数量</string>
    <string name="down_msg_no_wifi_net">WIFI网络连接失败</string>
    <string name="down_msg_wifi_net_ok">WIFI网络连接成功</string>
    <string name="local_mp3_explain">请点右上角“添加”下载MP3。系统会自动下载，最多下载5个，多余的将被删除。</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancle">关闭</string>
    <string name="bt_invite_friends">向好友推荐</string>
    <string name="bt_check_upgrade">检测更新</string>
    <string name="amtb_png_url">http://www.amtb.cn/amtbapp/amtbpng.png</string>
    <string name="dzxx_url">amtb@amtb.tw</string>
    <string name="pl_url">http://www.plurk.com/amtbtw</string>
    <string name="site_url">http://www.amtb.cn/amtbapp/</string>
    <string name="txwb_url">http://t.qq.com/amtbhz</string>
    <string name="xlwb_url">http://weibo.com/amtbtw</string>
    <string name="devxx_url">amtb@mail.sfzd5.com</string>
    <string name="devxx">问题反馈电子信箱</string>
    <string name="no_network">網絡未連接</string>
    <string name="load_fail">数据载入出错</string>
    <string name="load_nothing">没有数据项</string>
    <string name="open_mp3_manager_msg">未选择任何音频，是否打开音频管理？</string>
    <string name="title_activity_down_load">音频下载</string>
    <string name="title_activity_pick_download_folder">选择文件夹</string>
    <string name="title_activity_select_program">选择下载音频</string>
    <string name="no_storage_access_permission">没有磁盘读写权限</string>
    <string name="new_folder_button_title">新建</string>
    <string name="select_folder_ok_button_title">确定</string>
    <string name="folder_up">上一级</string>
    <string name="pick_download_folder_msg">是否现在设置下载目录？</string>
    <string name="select_program_msg">选择要下载的音频</string>
    <string name="select_program">选择音频</string>
    <string name="action_download_mp3">音频下载</string>
    <string name="title_activity_download_setting">下载设置</string>
    <string name="need_setting_title">未完成设置</string>
    <string name="need_setting_msg">下载前必须具备相应权限并选择下载的项目和保存位置</string>
    <string name="add_download_mp3_program">添加下载内容</string>
    <string name="create_folder_dialog_title">创建文件夹</string>
    <string name="download_save_folder">音频下载文件夹</string>
    <string name="no_set">未设置</string>
    <string name="no_permission">未获取权限</string>
    <string name="storage_permission">保存下载数据的权限</string>
    <string name="has_request_permission">已获取权限</string>
    <string name="need_request_storage_permission">请先设置媒体读写权限</string>
    <string name="has_set">已设置</string>
    <string name="bt_start_download_title">下载</string>
    <string name="bt_pause_download_title">停止</string>
    <string name="download_error_retry">下载出错，请重新打开下载</string>
    <string name="bt_clean">删除所有</string>
    <string name="bt_del_over">删除完成</string>
    <string name="bt_del_selected">删除选中</string>
    <string name="stop_to_remove">删除下载任务必须先停止下载</string>
    <string name="load_download_list_over">添加MP3 %d 個，請點選下載。</string>
    <string name="load_fail_reload">载入数据出错，请重新打开</string>
    <string name="share_amtb_png_fail">分享时出错</string>
    <string name="stop_service">关闭退出</string>
    <string name="title_show_html">显示隐藏文稿</string>
    <string name="no_doc">没有相应文档</string>
    <string name="zh_tw">正体/简体</string>
    <string name="api_msg_download_success">下载成功</string>
    <string name="api_msg_parse_fail">解析出错</string>
    <string name="api_msg_download_fail">下载失败</string>
    <string name="api_msg_network_fail">网络出错</string>
    <string name="api_unknow_fail">未知错误</string>
    <string name="share_need_storage_permission">分享图片需要读写权限</string>
</resources>