<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_manager_mp3"
        android:orderInCategory="100"
        android:title="@string/action_manager_mp3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_download"
        android:orderInCategory="100"
        android:title="@string/action_download_mp3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_news"
        android:orderInCategory="100"
        android:title="@string/zxxx"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/lxwm"
        app:showAsAction="never" />
</menu>
