<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/cb_only_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:text="@string/only_wifi_down_mp3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:text="@string/down_mp3_max_num"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <NumberPicker
        android:id="@+id/np_down_mp3_max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:text="@string/down_num_explain" />

</LinearLayout>
