<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.DownLoadActivity"
    tools:showIn="@layout/activity_down_load">

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/bottom_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.beardedhen.androidbootstrap.BootstrapButtonGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:bootstrapBrand="info"
            app:bootstrapSize="lg">
            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/bt_stop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bt_pause_download_title" />
            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/bt_start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bt_start_download_title" />
        </com.beardedhen.androidbootstrap.BootstrapButtonGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_del_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.beardedhen.androidbootstrap.BootstrapButtonGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:bootstrapBrand="info"
            app:bootstrapSize="lg">
            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/bt_clean"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bt_clean" />
            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/bt_del_over"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bt_del_over" />
            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/bt_del_selected"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bt_del_selected" />
        </com.beardedhen.androidbootstrap.BootstrapButtonGroup>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/mp3ProBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="24dp"
        android:layout_marginEnd="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>